# pixellab-python

./: .cursorrules  .env.secret  .gitignore  README.md  pyproject.toml  pytest.ini  test_api.py
.github/workflows/: publish.yml  test.yml
pixellab/: animate_with_skeleton.py  animate_with_text.py  client.py  estimate_skeleton.py  generate_animation_skeleton.py  generate_image_bitforge.py  generate_image_pixflux.py  generate_image_v5.py  generate_image_v6.py  generate_inpainting.py  generate_rotation.py  get_credits.py  inpaint.py  rotate.py
pixellab/models/: __init__.py  base64_image.py  image_size.py  keypoint.py
tests/: test_animate_with_skeleton.py  test_animate_with_text.py  test_client.py  test_estimate_skeleton.py  test_generate_animation_skeleton.py  test_generate_image_bitforge.py  test_generate_image_bitforge_with_pose.py  test_generate_image_pixflux.py  test_generate_image_v5.py  test_generate_image_v6.py  test_generate_inpainting.py  test_generate_rotation.py  test_get_balance.py  test_get_credits.py  test_incorrect_secret.py  test_inpaint.py  test_readme.py  test_rotate.py
tests/skeleton_points/: walk.json
